--- a/frontend-app/public/locales/ru/order.json
+++ b/frontend-app/public/locales/ru/order.json
@@ -1,5 +1,9 @@
 {
     "orderForm": {
+        "createTitle": "Форма создания заказа",
+        "createInfo": "Пожалуйста заполните основную информацию",
+        "editTitle": "Заказ №{{id}} от {{from}}",
+        "editInfo": "Редактирование",
         "siteName": "Название сайта",
         "siteLink": "Ссылка на сайт",
         "performerFee": "Вознограждение",
@@ -10,10 +14,49 @@
         "unitPrice": "Цена за единицу",
         "units": "Количество"
     },
+    "orderCard": {
+        "shop": "Магазин {{shop}}",
+        "performerFee": "Вознограждение {{performerFee}}$",
+        "from": "От {{from}}",
+        "numItems": "и еще {{numItems}} ед. в этом заказе",
+        "totalPrice": "Стоимость заказа: ${{totalPrice}}",
+        "numItemsAll": "{{numItemsAll}} ед. в этом заказе"
+    },
+    "orderSummary": {
+        "title": "Заказ №{{id}}",
+        "details": "Детали заказа",
+        "totalTitle": "Общая стоимость заказа",
+        "resultTitle": "Итог",
+        "offerYourself": "Чтобы предложить себя в качестве исполнителя, заполните форму:",
+        "total": "Общая стоимость заказа, в $",
+        "delivery": "Cтоимость доставки, в $",
+        "expenses": "Дополнительные расходы, в $",
+        "comment": "Комментарий",
+        "contacts": "Контакты заказчика",
+        "place": "Куда доставить",
+        "confirmRemove": "Подтвердите удаление заказа #{{id}}",
+        "removeWarn": "Это действие нельзя будет отменить"
+    },
+    "userOrder": {
+        "offers": "Заявки",
+        "offer": "Заявка #{{id}}",
+        "noneOffers": "Нет заявок"
+    },
+    "orderItem": {
+        "options": "Параметры: ",
+        "units": "{{units}} шт."
+    },
     "buttons": {
         "addItem": "Добавить товар",
         "create": "Создать",
-        "back": "Вернуться назад"
+        "back": "Вернуться назад",
+        "send": "Отправить",
+        "open": "Открыть",
+        "close": "Закрыть",
+        "sort": "Сортировка",
+        "edit": "Редактировать",
+        "remove": "Удалить",
+        "confirm": "Подтвердить"
     },
     "messages": {
         "nameRequired": "Введите название сайта!",
@@ -30,6 +73,44 @@
         "unitPriceRequired": "Укажите стоимость за ед. товара!",
         "unitPriceRule": "Минимальная стоимость ед. товара составляет 0.1 ден. ед.!",
         "unitsRequired": "Укажите количество товара!",
-        "unitsRule": "Минимальное количество товара составляет 1 ед."
+        "unitsRule": "Минимальное количество товара составляет 1 ед.",
+        "requredField": "Обязательное поле!",
+        "offerRule": "Значение должно быть не менее 1 ден.ед.!"
+    },
+    "allOrders": {
+        "title": "Заказы пользователей",
+        "titleUser": "Мои заказы",
+        "shop": "Магазин",
+        "place": "Страна доставки",
+        "numItems": "Кол-во товаров в заказе",
+        "price": "Стоимость заказа",
+        "status": "Статус заказа",
+        "filters": "Фильтры",
+        "numMsg": "До {{num}} шт.",
+        "priceRange": "От {{min}}$ до {{max}}$",
+        "numPages": "На странице {{txt}} заказов из {{total}}"
+    },
+    "sortTypes": {
+        "new": "Новые",
+        "old": "Старые",
+        "maxmin": "Стоимость заказа Max --> Min",
+        "minmax": "Стоимость заказа Min --> Max"
+    },
+    "toastDeleteOrder":{
+        "success": "Заказ №{{id}} был успешно удален!",
+        "pending": "Удаление заказа...",
+        "error": "Возникла ошибка при удалении...",
+        "info": "Заказ нельзя удалить, так как он уже в работе!",
+        "editInfo": "Заказ нельзя редактировать, так как он уже в работе!"
+    },
+    "toastCreateOrder":{
+        "success": "Заказ №{{id}} успешно создан!",
+        "pending": "Создание заказа...",
+        "error": "Не удалось создать заказ"
+    },
+    "toastEditOrder":{
+        "success": "Заказ №{{id}} успешно отредактирован!",
+        "pending": "Редактирование заказа...",
+        "error": "Не удалось отредактировать заказ"
     }
 }
