--- a/frontend-app/public/locales/ru/user.json
+++ b/frontend-app/public/locales/ru/user.json
@@ -38,5 +38,18 @@
         "add": "Добавить",
         "cancel": "Отмена",
         "save": "Сохранить"   
+    },
+    "offer": {
+        "total": "Общая стоимость заказа: {{total}}$",
+        "delivery": "Стоимость доставки: {{delivery}}$",
+        "expenses": "Дополнительные расходы: {{expenses}}$",
+        "comment": "Комментарий: {{comment}}",
+        "toUserProfile": "Открыть профиль пользователя",
+        "selectOffer": "Выбрать эту заявку"
+    },
+    "offerTotas": {
+        "success": "Заявка №{{id}} выбрана!",
+        "pending": "Выбор заявки...",
+        "error": "Не удалось выбрать заявку"
     }
 }
