--- a/frontend-app/public/locales/en/navigation.json
+++ b/frontend-app/public/locales/en/navigation.json
@@ -1,4 +1,5 @@
 {
+    "title": "Delivery order",
     "unAuthRoutes": {
         "createOrder": "Create order",
         "findOrder": "Become an intermediary",
