--- a/frontend-app/public/locales/ru/navigation.json
+++ b/frontend-app/public/locales/ru/navigation.json
@@ -5,9 +5,5 @@
         "findOrder": "Стать посредником",
         "login": "Войти"
     },
-    "authRoutes": {
-        "myProfile": "Мой профиль",
-        "myAddresses": "Мои адреса",
-        "myOrders": "Мои заказы"
-    }
+    "authRoutes": ["Мой профиль", "Мои адреса", "Мои заказы", "Мои заявки"]
 }
