--- a/frontend-app/public/locales/ru/user.json
+++ b/frontend-app/public/locales/ru/user.json
@@ -12,32 +12,11 @@
         "emailRegex": "Неверный формат!",
         "passwordRequired": "Введите пароль!"
     },
-    "toastLogin":{
-        "success": "Вы были успешно авторизованы!",
-        "pending": "Вход...",
-        "error": "Не удалось выполнить вход !\n{{msg}}"
-    },
-    "toastDeleteAddress":{
-        "success": "Адрес удален!",
-        "pending": "Удаление адреса...",
-        "error": "Не удалось удалить адрес"
-    },
-    "toastAddAddress":{
-        "success": "Адрес успешно добавлен!",
-        "pending": "Добавление адреса...",
-        "error": "Не удалось добавить адрес"
-    },
     "addresses": {
         "city": "Город: {{city}}",
         "country": "Страна: {{country}}",
         "postCode": "Индекс: {{postCode}}",
         "addPlaceholder": "Страна, город или почтовый индекс..."
-    },
-    "buttons": {
-        "del": "Удалить",
-        "add": "Добавить",
-        "cancel": "Отмена",
-        "save": "Сохранить"   
     },
     "offer": {
         "total": "Общая стоимость заказа: {{total}}$",
@@ -45,11 +24,9 @@
         "expenses": "Дополнительные расходы: {{expenses}}$",
         "comment": "Комментарий: {{comment}}",
         "toUserProfile": "Открыть профиль пользователя",
-        "selectOffer": "Выбрать эту заявку"
-    },
-    "offerTotas": {
-        "success": "Заявка №{{id}} выбрана!",
-        "pending": "Выбор заявки...",
-        "error": "Не удалось выбрать заявку"
+        "selectOffer": "Выбрать эту заявку",
+        "goToOrder": "Перейти к заказу",
+        "goToUser": "Профиль заказчика",
+        "trackPlaceholder": "Пример: JD014600004291022110"
     }
 }
