--- a/frontend-app/public/locales/ru/order.json
+++ b/frontend-app/public/locales/ru/order.json
@@ -67,5 +67,10 @@
         {"text": "Старые", "value": "oldest"},
         {"text": "Стоимость заказа Max --> Min", "value": "maxmin"},
         {"text": "Стоимость заказа Min --> Max", "value": "minmax"}
-    ]
+    ],
+    "load": "Загрузка...",
+    "noOrders": "У вас еще нет заказов",
+    "goToCreateOrder": "Перейти к созданию заказа",
+    "noOffers": "У вас еще нет заказов",
+    "goToOrders": "Смотреть заказы других пользователей"
 }
