--- a/frontend-app/public/locales/ru/toast_messages.json
+++ b/frontend-app/public/locales/ru/toast_messages.json
@@ -64,5 +64,11 @@
         "pending": "Добавление адреса...",
         "error": "Не удалось добавить адрес"
     },
+    "toastCreateOffer":{
+        "success": "Заявка №{{id}} отправлена!",
+        "pending": "Создание заявки...",
+        "error": "Не удалось отправить заявку",
+        "errorWhenOwner": "Нельзя отправлять заявку на свой заказ"
+    },
     "unAuthMessage": "Вам необходимо авторизоваться!"
 }
