--- a/frontend-app/public/locales/ru/toast_messages.json
+++ b/frontend-app/public/locales/ru/toast_messages.json
@@ -70,5 +70,10 @@
         "error": "Не удалось отправить заявку",
         "errorWhenOwner": "Нельзя отправлять заявку на свой заказ"
     },
-    "unAuthMessage": "Вам необходимо авторизоваться!"
+    "unAuthMessage": "Вам необходимо авторизоваться!",
+    "toastUpdateProfile":{
+        "success": "Профиль обновлен!",
+        "pending": "Обновление...",
+        "error": "Не удалось обновить профиль"
+    }
 }
