Email sender and registration page

--- a/frontend-app/public/locales/ru/toast_messages.json
+++ b/frontend-app/public/locales/ru/toast_messages.json
@@ -75,5 +75,10 @@
         "success": "Профиль обновлен!",
         "pending": "Обновление...",
         "error": "Не удалось обновить профиль"
+    },
+    "toastRegistration":{
+        "success": "Профиль создан!",
+        "pending": "Регистрация...",
+        "error": "Произошла ошибка при регистрации!"
     }
 }
