--- a/frontend-app/public/locales/en/toast_messages.json
+++ b/frontend-app/public/locales/en/toast_messages.json
@@ -75,5 +75,10 @@
         "success": "Profile updated!",
         "pending": "Updating...",
         "error": "Failed to update profile"
+    },
+    "toastRegistration":{
+        "success": "Profile created!",
+        "pending": "Registering...",
+        "error": "An error occurred while registering!"
     }
 }
