Admin actions and fix bugs

--- a/frontend-app/public/locales/en/buttons.json
+++ b/frontend-app/public/locales/en/buttons.json
@@ -13,5 +13,7 @@
     "cancel": "Cancel",
     "save": "Save",
     "addTrack": "Add track number",
-    "received": "Received"
+    "received": "Received",
+    "lock": "Lock",
+    "unlock": "Unlock"
 }
