--- a/frontend-app/public/locales/ru/buttons.json
+++ b/frontend-app/public/locales/ru/buttons.json
@@ -13,5 +13,7 @@
     "cancel": "Отмена",
     "save": "Сохранить",
     "addTrack": "Добавить трек-номер",
-    "received": "Получено"
+    "received": "Получено",
+    "lock": "Заблокировать",
+    "unlock": "Разблокировать"
 }
