--- a/frontend-app/public/locales/ru/navigation.json
+++ b/frontend-app/public/locales/ru/navigation.json
@@ -3,7 +3,10 @@
     "unAuthRoutes": {
         "createOrder": "Создать заказ",
         "findOrder": "Стать посредником",
-        "login": "Войти"
+        "login": "Войти",
+        "logout": "Выйти",
+        "allUsers": "Пользователи",
+        "howtouse": "Как пользоваться?"
     },
     "authRoutes": ["Мой профиль", "Мои адреса", "Мои заказы", "Мои заявки"]
 }
