--- a/frontend-app/public/locales/ru/order.json
+++ b/frontend-app/public/locales/ru/order.json
@@ -72,5 +72,7 @@
     "noOrders": "У вас еще нет заказов",
     "goToCreateOrder": "Перейти к созданию заказа",
     "noOffers": "У вас еще нет заказов",
-    "goToOrders": "Смотреть заказы других пользователей"
+    "goToOrders": "Смотреть заказы других пользователей",
+    "noAddresses": "У вас еще нет адресов доставки",
+    "addAddr": "Добавьте адрес доставки"
 }
