--- a/frontend-app/public/locales/ru/user.json
+++ b/frontend-app/public/locales/ru/user.json
@@ -11,7 +11,7 @@
         "emailRequired": "Введите email !",
         "emailRegex": "Неверный формат!",
         "passwordRequired": "Введите пароль!",
-        "passwordValidation": "Пароль должен содержать не менее одного символа a-z, A-z, и не менее 1 цифры",
+        "passwordValidation": "Пароль должен содержать не менее одного символа a-z, A-z, не менее 1 цифры и спец. символа",
         "passwordLngth": "Длина пароля должна быть не менее 5 символов"
     },
     "addresses": {
@@ -37,5 +37,11 @@
     "firstName": "Имя",
     "lastName": "Фамилия",
     "next": "Продолжить",
-    "registrationTitile": "Регистрация"
+    "registrationTitile": "Регистрация",
+    "afterReg": "Для активации аккаунта перейдите по ссылке, отправленной на почту, указанную при регистрации",
+    "removeConfirm": "Подтвердите удаление профиля",
+    "warnMessg": "Это действие нельзя будет отменить!",
+    "notFoundMsg1": "Извините, мы не смогли найти эту страницу.",
+    "notFoundMsg2": "Но не волнуйтесь, вернитесь на домашнюю страницу.",
+    "blocked": "Заблокирован"
 }
