--- a/frontend-app/public/locales/ru/toast_messages.json
+++ b/frontend-app/public/locales/ru/toast_messages.json
@@ -79,6 +79,23 @@
     "toastRegistration":{
         "success": "Профиль создан!",
         "pending": "Регистрация...",
-        "error": "Произошла ошибка при регистрации!"
+        "error": "Произошла ошибка при регистрации!",
+        "errorEmail": "Email - {{email}} уже занят!",
+        "sendingEmailError": "При отправке письма произошла ошибка, повторите попытку позже"
+    },
+    "toastDeleteProfile":{
+        "success": "Профиль удален!",
+        "pending": "Удаление...",
+        "error": "Не удалось удалить профиль"
+    },
+    "toastLockProfile":{
+        "success": "Профиль заблокирован!",
+        "pending": "Блокируем...",
+        "error": "Не удалось заблокировать профиль"
+    },
+    "toastUnLockProfile":{
+        "success": "Профиль разблокирован!",
+        "pending": "Разблокировка...",
+        "error": "Не удалось разблокировать профиль"
     }
 }
