--- a/frontend-app/public/locales/ru/validation_messages.json
+++ b/frontend-app/public/locales/ru/validation_messages.json
@@ -2,9 +2,9 @@
     "nameRequired": "Введите название сайта!",
     "linkRequired": "Введите ссылку на сайт!",
     "linkRegex": "Неверный формат ссылки!",
-    "feeRequired": "Введите размер вознограждения!",
-    "feeRule": "Вознограждение должно быть не менее 1 ден.ед.!",
-    "feePlaceholder": "Укажите размер вознограждения в $",
+    "feeRequired": "Введите размер вознаграждения!",
+    "feeRule": "Вознаграждение должно быть не менее 1 ден.ед.!",
+    "feePlaceholder": "Укажите размер вознаграждения в $",
     "producNameRequired": "Введите название товара!",
     "optionsRequired": "Введите характеристики товара!",
     "optionPlaceholder": "Размер, цвет, вес и т.д.",
